# ccny_experimental

./: glwidget.cpp  main.cpp
GUI_test/: Test4.pro  glwidget.h  mainwindow.ui
IMU_EKF/: .gitignore
IMU_EKF/EKF/: .cproject  .project  .pydevproject  CMakeLists.txt  CMakeLists.txt~  cmake_install.cmake  manifest.xml  manifest.xml~
IMU_EKF/EKF/include/EKF/: ekf.h  ekf.h~  ekf_nodelet.cpp
IMU_EKF/EKF/launch/: ekf.launch  ekf.launch~  ekf2.launch  ekf2.launch~  niac.launch  niac.launch~  niac_madgwick.launch  openni.launch
IMU_EKF/EKF/src/: ekf.cpp  ekf.cpp~  ekf_node.cpp~  ekf_nodelet.cpp~  niac_nodelet.cpp~
IMU_EKF/KF/: CMakeLists.txt  CMakeLists.txt~  callgrind.out.14440  callgrind.out.14460  callgrind.out.14466  callgrind.out.14864  callgrind.out.14935  callgrind.out.15437  callgrind.out.15443  callgrind.out.15690  callgrind.out.15944  callgrind.out.16192  cmake_install.cmake  cmake_install.cmake~  ekf_nodelet.xml~  kf_nodelet.xml  kf_nodelet.xml~  mainpage.dox  manifest.xml  manifest.xml~
IMU_EKF/KF/include/: ekf_nodelet.cpp~  ekf_nodelet.h~
IMU_EKF/KF/include/KF/: complementary_filter.h  complementary_filter_ros.h  ekf.h~  kf.h  kf.h~  kf_nodelet.cpp~  kf_nodelet.h  kf_nodelet.h~
IMU_EKF/KF/launch/: ekf.launch~  ekf2.launch  ekf2.launch~  kf.launch  kf.launch~  niac_madgwick.launch~  openni.launch~  visual_odometry.launch~
IMU_EKF/KF/src/: complementary_filter.cpp  complementary_filter_ros.cpp  ekf.cpp~  kf.cpp  kf.cpp~  kf_node.cpp  kf_node.cpp~  kf_nodelet.cpp  niac_node.cpp~
IMU_EKF/imu_complementary_filter/: manifest.xml
IMU_EKF/imu_complementary_filter/include/imu_complementary_filter/: complementary_filter.h  complementary_filter_ros.h
IMU_EKF/imu_complementary_filter/launch/: complementary_filter.launch
IMU_EKF/imu_complementary_filter/src/: complementary_filter.cpp  complementary_filter_node.cpp  complementary_filter_ros.cpp
